--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ fastapi-limiter = "^0.1.6"
 python-dotenv = "^1.0.1"
 fastapi-middleware = "^0.1.0"
 cloudinary = "^1.38.0"
+sphinx = "^7.2.6"
 
 
 [build-system]
